# rs-sep5

./: Cargo.toml  README.md
src/: lib.rs  seed_phrase.rs
tests/: tests.rs
